package com.telenav.fiasco.runtime.tools.jar;

import com.telenav.fiasco.runtime.tools.resource.ResourceTool;

public interface JarTool extends ResourceTool
{
}
