package com.telenav.fiasco.runtime.tools.resource;

import static com.telenav.kivakit.core.ensure.Ensure.unimplemented;

/**
 * Creates a packaged application
 *
 * @author jonathanl (shibo)
 */
public class Packager extends BaseResourceTool
{
    @SuppressWarnings("unused")
    public void createApplication()
    {
        unimplemented();
    }
}
