package com.telenav.fiasco.tools.repository;

import com.telenav.fiasco.tools.BaseTool;

public abstract class RepositoryTool extends BaseTool
{
}
